--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+  test:
+    stage: test
 
     steps:
       - uses: actions/checkout@v2
@@ -13,5 +15,5 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Build with Maven
+      - name: Test with Maven
         run: mvn --batch-mode --update-snapshots verify
